# xpkg

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  ROADMAP.md  SUPPORT.md
crates/xpkg/: Cargo.toml
crates/xpkg-core/: Cargo.toml
crates/xpkg-core/src/: lib.rs
crates/xpkg-core/src/archive/: mod.rs  pack.rs  strip.rs
crates/xpkg-core/src/builder/: dirs.rs  env.rs  exec.rs  log.rs  mod.rs  pipeline.rs  types.rs
crates/xpkg-core/src/lint/: dependency.rs  elf.rs  metadata.rs  mod.rs  paths.rs  permissions.rs  report.rs  rules.rs
crates/xpkg-core/src/recipe/: mod.rs  pkgbuild.rs  types.rs  validate.rs  xbuild.rs
crates/xpkg-core/src/repo/: db.rs  deploy.rs  desc.rs  inspect.rs  mod.rs  types.rs
crates/xpkg-core/src/signing/: keys.rs  mod.rs  sign.rs  verify.rs
crates/xpkg/src/: cli.rs  main.rs
docs/: CLI.md  INSTALLATION.md  LINTING.md  PACKAGING-GUIDE.md  REPOSITORY.md  SIGNING.md  XBUILD.md  realexample.md
packaging/xpkg/: XBUILD
