[workspace]
members = ["crates/xpkg", "crates/xpkg-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["xscriptor"]
repository = "https://github.com/xscriptor/xpkg"
description = "Package building tool for X Distribution"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "color"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Networking
ureq = "2"

# Checksums
sha2 = "0.10"

# Archive extraction
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
bzip2 = "0.5"
zstd = "0.13"
zip = "2"

# OpenPGP signing
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

# Internal crates
xpkg-core = { path = "crates/xpkg-core" }
