[package]
name = "xpkg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for the xpkg package builder"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
xz2 = { workspace = true }
bzip2 = { workspace = true }
zstd = { workspace = true }
zip = { workspace = true }
sequoia-openpgp = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
